carrousel avec ancres

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       </button>
     </div>
   </div>
+  <ul class="carousel-links">
+    <li><a href="/assets/img/agenda-01.avif">Item 1</a></li>
+    <li><a href="/assets/img/agenda-02.avif">Item 2</a></li>
+    <li><a href="/assets/img/agenda-03.avif">Item 3</a></li>
+    <li><a href="/assets/img/agenda-04.avif">Item 4</a></li>
+    <li><a href="/assets/img/agenda-05.avif">Item 5</a></li>
 </body>
 
 </html>
